using UnityEngine;
using System.Collections.Generic;
using System.Linq;

/// <summary>
/// [í†µí•© AI ìŠ¤í¬ë¦½íŠ¸]
/// ì›¨ì´í¬ì¸íŠ¸(ìˆœì°°)ì™€ ìŠ¤ìºë„ˆ(ì¶”ì /ê³µê²©)ë¥¼ ëª¨ë‘ ì²˜ë¦¬í•˜ë©°,
/// ì²´ë ¥, ì£½ìŒ, ì• ë‹ˆë©”ì´ì…˜(Speed, Attack, Die) ì œì–´ë¥¼ ë‹´ë‹¹í•©ë‹ˆë‹¤.
/// 
/// [í•„ìˆ˜ Animator Parameters]
/// - Speed (Float)
/// - Attack (Trigger)
/// - Die (Trigger)
/// 
/// [í•„ìˆ˜ ì»´í¬ë„ŒíŠ¸]
/// - Animator, HY_Scanner, SpriteRenderer, Collider2D
/// </summary>
public class HY_EnemyUnitMovement : MonoBehaviour
{
    [Header("ì´ë™ ì„¤ì •")]
    [Header("ì´ë™ ì„¤ì •")]
    [Tooltip("ê¸°ë³¸ ìˆœì°° ì†ë„")]
    [SerializeField] private float moveSpeed = 3f;
    [Tooltip("ì›¨ì´í¬ì¸íŠ¸ì— ë„ë‹¬í–ˆë‹¤ê³  íŒë‹¨í•˜ëŠ” ê±°ë¦¬")]
    [SerializeField] private float stoppingDistance = 0.5f;

    [Header("ì „íˆ¬ ì„¤ì •")]
    [Tooltip("ì ì„ ë°œê²¬í–ˆì„ ë•Œì˜ ì¶”ê²© ì†ë„")]
    [SerializeField] private float chaseSpeed = 4f;
    [Tooltip("ì´ ê±°ë¦¬ ì•ˆìœ¼ë¡œ ë“¤ì–´ì˜¤ë©´ ê³µê²©ì„ ì‹œì‘í•©ë‹ˆë‹¤")]
    [SerializeField] private float attackRange = 1.0f; 
    [Tooltip("ê³µê²© ë°ë¯¸ì§€ (í•„ìš”í•œ ê²½ìš°)")]
    [SerializeField] private int attackDamage = 1; // (ì˜ˆì‹œ)

    [Header("ì²´ë ¥ ì„¤ì •")]
    [SerializeField] private int maxHp = 10;
    private int currentHp;
    private bool isLive = true;

    [Header("ì›¨ì´í¬ì¸íŠ¸ ì„¤ì •")]
    [Tooltip("Sceneì—ì„œ 'spaceship'ìœ¼ë¡œ ì‹œì‘í•˜ëŠ” ì˜¤ë¸Œì íŠ¸ë¥¼ ìë™ìœ¼ë¡œ ì°¾ì•„ ìˆœì„œëŒ€ë¡œ ì •ë ¬")]
    [SerializeField] private bool autoFindCircles = true;
    [Tooltip("ìˆ˜ë™ ì›¨ì´í¬ì¸íŠ¸ (autoFindCirclesê°€ falseì¼ ë•Œ)")]
    [SerializeField] private Transform[] manualWaypoints;

    [Header("ì»´í¬ë„ŒíŠ¸ (ìë™ ì°¾ê¸°)")]
    [SerializeField] private Animator animator;
    public HY_Scanner scanner; // AIì˜ 'ëˆˆ' ì—­í• 
    private SpriteRenderer spriteRenderer; // ì¢Œìš° ë°˜ì „ìš©

    // --- ë‚´ë¶€ ê´€ë¦¬ ë³€ìˆ˜ ---
    private List<Transform> waypoints = new List<Transform>();
    private int currentWaypointIndex = 0;
    private bool hasReachedFinalDestination = false;

    // (SpawnManagerì— ì‚¬ë§ ë³´ê³ ê°€ í•„ìš”í•˜ë‹¤ë©´ HY_Enemyì²˜ëŸ¼ enemyID ë³€ìˆ˜ ì¶”ê°€)
    bool deathReported = false; // ì‚¬ë§ ë³´ê³  ì¤‘ë³µ ë°©ì§€
    public string enemyID; 


    void Start()
    {
        // 1. ì»´í¬ë„ŒíŠ¸ ìë™ ì°¾ê¸° ë° ì´ˆê¸°í™”
        if (animator == null) animator = GetComponent<Animator>();
        if (scanner == null) scanner = GetComponent<HY_Scanner>();
        spriteRenderer = GetComponent<SpriteRenderer>(); 
        
        currentHp = maxHp; // ì²´ë ¥ ì´ˆê¸°í™”
        isLive = true;

        if (spriteRenderer == null)
        {
            Debug.LogError($"[AI] {name}: SpriteRendererê°€ ì—†ìŠµë‹ˆë‹¤! ì¢Œìš° ë°˜ì „(flipX)ì„ í•  ìˆ˜ ì—†ìŠµë‹ˆë‹¤.");
        }

        // 2. ì›¨ì´í¬ì¸íŠ¸(ìˆœì°° ê²½ë¡œ) ì„¤ì •
        if (autoFindCircles)
        {
            FindAndSortCircles();
        }
        else if (manualWaypoints != null && manualWaypoints.Length > 0)
        {
            waypoints = new List<Transform>(manualWaypoints);
            Debug.Log($"[AI] {name}: ìˆ˜ë™ ì›¨ì´í¬ì¸íŠ¸ {waypoints.Count}ê°œ ì‚¬ìš©");
        }

        if (waypoints.Count == 0 && autoFindCircles)
        {
             Debug.LogWarning($"[AI] {name}: 'spaceship'ìœ¼ë¡œ ì‹œì‘í•˜ëŠ” ì›¨ì´í¬ì¸íŠ¸ë¥¼ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤! (ì œìë¦¬ ëŒ€ê¸°)");
        }
    }

    /// <summary>
    /// AIì˜ ë©”ì¸ ë‘ë‡Œ (ë§¤ í”„ë ˆì„ ì‹¤í–‰)
    /// </summary>
    void Update()
    {
        // ì£½ì—ˆìœ¼ë©´ ì•„ë¬´ê²ƒë„ í•˜ì§€ ì•ŠìŒ
        if (!isLive)
        {
            animator.SetBool("isLive", false);
            return;
        }   

        // 1. "ëˆˆ" (ìŠ¤ìºë„ˆ)ìœ¼ë¡œ ì ì„ ì°¾ìŒ
        Transform target = scanner.nearestTarget;

        if (target != null)
        {
            // 2. ì ì´ ìˆë‹¤! (ì „íˆ¬ ëª¨ë“œ: ì¶”ê²© ë˜ëŠ” ê³µê²©)
            HandleCombat(target);
        }
        else
        {
            // 3. ì ì´ ì—†ë‹¤! (ìˆœì°° ëª¨ë“œ)
            HandlePatrol();
        }
    }

    /// <summary>
    /// (ì „íˆ¬) íƒ€ê²Ÿì„ ì¶”ê²©í•˜ê±°ë‚˜ ê³µê²©í•©ë‹ˆë‹¤.
    /// </summary>
    void HandleCombat(Transform target)
    {
        float distance = Vector3.Distance(transform.position, target.position);
        Vector3 direction = (target.position - transform.position).normalized;

        if (distance > attackRange)
        {
            // --- 1. ì¶”ê²© (Chase) ---
            // "ì ì´ ì£½ìœ¼ë©´... ë‹¤ì‹œ ì›€ì§ì´ê³ " (ìƒˆë¡œìš´ ì ì„ í–¥í•´)
            transform.position += direction * chaseSpeed * Time.deltaTime;
            
            // ì• ë‹ˆë©”ì´ì…˜: 'Walk' ìƒíƒœ ì¬ìƒ (Speed > 0.1)
            animator.SetFloat("Speed", chaseSpeed);
            
            // ë°©í–¥: ì¢Œìš° ë°˜ì „ (ìƒí•˜ ì´ë™ ì‹œ ë§ˆì§€ë§‰ ì¢Œìš° ë°©í–¥ ìœ ì§€)
            HandleSpriteFlip(direction.x);
        }
        else
        {
            // --- 2. ê³µê²© (Attack) ---
            // "ê°€ê¹Œì›Œ ì§€ë©´ ê³µê²©ì„ í•˜ê³ "
            // (1) ë©ˆì¶¤ (Animator FSMì´ 'Idle' ìƒíƒœë¡œ ê°€ê²Œ í•¨)
            animator.SetFloat("Speed", 0); 
            
            // (2) ê³µê²© íŠ¸ë¦¬ê±° ë°œë™ (FSMì´ 'Idle' -> 'Attack'ìœ¼ë¡œ ì¦‰ì‹œ ì „í™˜)
            animator.SetTrigger("Attack"); 
            
            // (3) ë°©í–¥: ì ì„ ë°”ë¼ë³´ë„ë¡ ì¢Œìš° ë°˜ì „
            HandleSpriteFlip(direction.x);
        }
    }

    /// <summary>
    /// (ìˆœì°°) ì›¨ì´í¬ì¸íŠ¸ë¥¼ ë”°ë¼ ì´ë™í•©ë‹ˆë‹¤.
    /// </summary>
    void HandlePatrol()
    {
        // "ì ì´ ì£½ìœ¼ë©´... ì—†ìœ¼ë©´ ë‹¤ì‹œ ì›€ì§ì´ê³ "
        if (hasReachedFinalDestination || waypoints.Count == 0)
        {
            // ë©ˆì¶¤ (ëª¨ë“  ìˆœì°° ì™„ë£Œ ë˜ëŠ” ìˆœì°° ê²½ë¡œ ì—†ìŒ)
            animator.SetFloat("Speed", 0); // 'Idle' ìƒíƒœë¡œ
            return;
        }

        // --- 1. ëª©í‘œ ì›¨ì´í¬ì¸íŠ¸ ì„¤ì • ---
        Transform targetWaypoint = waypoints[currentWaypointIndex];
        if (targetWaypoint == null) 
        {
            // (í˜¹ì‹œ ì›¨ì´í¬ì¸íŠ¸ê°€ íŒŒê´´ëœ ê²½ìš°)
            currentWaypointIndex++;
            return;
        }

        float distance = Vector3.Distance(transform.position, targetWaypoint.position);

        // --- 2. ì›¨ì´í¬ì¸íŠ¸ ë„ì°© ---
        if (distance <= stoppingDistance)
        {
            OnReachedWaypoint(currentWaypointIndex);
            currentWaypointIndex++;

            if (currentWaypointIndex >= waypoints.Count)
            {
                // ìµœì¢… ëª©ì ì§€ ë„ì°©
                OnReachedFinalDestination();
            }
            return;
        }

        // --- 3. ì´ë™ ---
        Vector3 direction = (targetWaypoint.position - transform.position).normalized;
        transform.position += direction * moveSpeed * Time.deltaTime;

        // ì• ë‹ˆë©”ì´ì…˜: 'Walk' ìƒíƒœ ì¬ìƒ
        animator.SetFloat("Speed", moveSpeed);
        
        // ë°©í–¥: ì¢Œìš° ë°˜ì „
        HandleSpriteFlip(direction.x);
    }

    /// <summary>
    /// ì´ë™ ë°©í–¥(x)ì— ë”°ë¼ ìŠ¤í”„ë¼ì´íŠ¸ë¥¼ ì¢Œìš°ë¡œ ë’¤ì§‘ìŠµë‹ˆë‹¤.
    /// </summary>
    void HandleSpriteFlip(float directionX)
    {
        if (spriteRenderer == null) return;

        // directionXê°€ 0ì´ ì•„ë‹ ë•Œë§Œ ë°©í–¥ì„ ë°”ê¿‰ë‹ˆë‹¤.
        // (0ì´ë©´, ì¦‰ ìˆ˜ì§ ì´ë™ ì‹œì—ëŠ” ë§ˆì§€ë§‰ ë°©í–¥ì„ ìœ ì§€í•©ë‹ˆë‹¤)
        if (directionX > 0.01f) // ì˜¤ë¥¸ìª½
        {
            spriteRenderer.flipX = false;
        }
        else if (directionX < -0.01f) // ì™¼ìª½
        {
            spriteRenderer.flipX = true;
        }
    }

    // --- ì²´ë ¥ ë° í”¼ê²© ë¡œì§ (HY_Enemyì—ì„œ ê°€ì ¸ì˜´) ---

    /// <summary>
    /// ì™¸ë¶€(ì´ì•Œ ë“±)ì—ì„œ í˜¸ì¶œí•˜ì—¬ ë°ë¯¸ì§€ë¥¼ ì…í™ë‹ˆë‹¤.
    /// </summary>
    public void TakeDamage(int damage)
    {
        if (!isLive) return; // ì´ë¯¸ ì£½ì—ˆìœ¼ë©´ ë¬´ì‹œ

        currentHp -= damage;
        // (ì„ íƒ) ì—¬ê¸°ì„œ í”¼ê²© ì• ë‹ˆë©”ì´ì…˜ íŠ¸ë¦¬ê±°
        // animator.SetTrigger("Hit"); 

        if (currentHp <= 0)
        {
            Die();
        }
    }

    /// <summary>
    /// ì‚¬ë§ ì²˜ë¦¬
    /// </summary>
    public void Die()
    {
        if (!isLive) return; // ì¤‘ë³µ ì‚¬ë§ ë°©ì§€
        isLive = false;
        currentHp = 0;

        // 1. ì£½ìŒ ì• ë‹ˆë©”ì´ì…˜ ì¬ìƒ
        animator.SetTrigger("Die");
        if (deathReported) return;       // ì¤‘ë³µ ë³´ê³  ë°©ì§€
        deathReported = true;

        // ìŠ¤í° ë§¤ë‹ˆì €ì— ì‚¬ë§ ë³´ê³ 
        if (SpawnManager.Instance != null)
            SpawnManager.Instance.OnMonsterDied(enemyID);

        // 2. ë¬¼ë¦¬/ì¶©ëŒ ì¤‘ì§€
        GetComponent<Collider2D>().enabled = false;
        // Rigidbody2Dê°€ ìˆë‹¤ë©´ ë¹„í™œì„±í™”
        Rigidbody2D rb = GetComponent<Rigidbody2D>();
        if (rb != null)
        {
            rb.linearVelocity = Vector2.zero;
            rb.isKinematic = true;
        }

        // 3. ì˜¤ë¸Œì íŠ¸ íŒŒê´´ (Die ì• ë‹ˆë©”ì´ì…˜ ì¬ìƒ ì‹œê°„ ê¸°ë‹¤ë¦¬ê¸°)
        // (Tip: ì• ë‹ˆë©”ì´ì…˜ í´ë¦½ì˜ ì‹¤ì œ ê¸¸ì´ë§Œí¼ ì„¤ì •í•˜ëŠ” ê²ƒì´ ì¢‹ìŒ)
        Destroy(gameObject, 2.0f); 
    }

    /// <summary>
    /// ì´ì•Œ ë“±ê³¼ì˜ ì¶©ëŒ ê°ì§€
    /// </summary>
    void OnTriggerEnter2D(Collider2D collision)
    {
        // (ì´ì•Œ ìŠ¤í¬ë¦½íŠ¸ ì´ë¦„ì´ HY_Bulletì´ë¼ê³  ê°€ì •)
        HY_Bullet bullet = collision.GetComponent<HY_Bullet>();
        if (bullet != null)
        {
            TakeDamage(bullet.damage);
            
            // ì´ì•Œì´ ê´€í†µí˜•ì´ ì•„ë‹ˆë¼ë©´ ì¦‰ì‹œ íŒŒê´´
            Destroy(bullet.gameObject);
        }
    }


    // --- ì›¨ì´í¬ì¸íŠ¸ ê´€ë ¨ í—¬í¼ í•¨ìˆ˜ ---

    void OnReachedWaypoint(int waypointIndex)
    {
        // Debug.Log($"[AI] {name}: ì›¨ì´í¬ì¸íŠ¸ {waypoints[waypointIndex].name}ì— ë„ì°©!");
        // (í•„ìš”ì‹œ ì´ê³³ì—ì„œ ì‚¬ìš´ë“œ ì¬ìƒ ë“±)
    }

    void OnReachedFinalDestination()
    {
        hasReachedFinalDestination = true;
        animator.SetFloat("Speed", 0); // ë©ˆì¶¤
        Debug.Log($"[AI] {name}: ğŸ¯ ìµœì¢… ëª©ì ì§€ ë„ì°©! ìˆœì°°ì„ ì¤‘ë‹¨í•©ë‹ˆë‹¤.");
    }

    /// <summary>
    /// Sceneì—ì„œ "Circle"ìœ¼ë¡œ ì‹œì‘í•˜ëŠ” ëª¨ë“  ì˜¤ë¸Œì íŠ¸ë¥¼ ì°¾ì•„ ê±°ë¦¬ìˆœìœ¼ë¡œ ì •ë ¬
    /// </summary>
    void FindAndSortCircles()
    {
        // 1) í›„ë³´ ìˆ˜ì§‘: ì´ë¦„ì´ "Circle"ë¡œ ì‹œì‘í•˜ëŠ” ì˜¤ë¸Œì íŠ¸ë“¤
    //    (íƒœê·¸ë¥¼ ì“°ì‹ ë‹¤ë©´ FindGameObjectsWithTag("Circle")ë¡œ ëŒ€ì²´ ê°€ëŠ¥)
    List<Transform> circleList = FindObjectsOfType<Transform>()
        .Where(t => t != null && t.gameObject != null && t.gameObject.name.StartsWith("Circle"))
        .ToList();

    if (circleList.Count == 0)
    {
        waypoints = new List<Transform>();
        Debug.Log($"[AI] {name}: 'Circle' ì›¨ì´í¬ì¸íŠ¸ê°€ ì—†ìŠµë‹ˆë‹¤.");
        return;
    }

    // 2) Greedy ê²½ë¡œ êµ¬ì„±: í˜„ì¬ ìœ„ì¹˜ì—ì„œ ê°€ì¥ ê°€ê¹Œìš´ ê²ƒì„ í•˜ë‚˜ì”© ê³ ë¦„
    Vector3 currentPos = transform.position; // ì‹œì‘ì : ì êµ° ìŠ¤í° ìœ„ì¹˜(í˜„ì¬ ìœ ë‹› ìœ„ì¹˜)
    var remaining = new List<Transform>(circleList);
    var ordered = new List<Transform>(circleList.Count);

    while (remaining.Count > 0)
    {
        Transform next = null;
        float bestSqr = float.PositiveInfinity;

        // ë‚¨ì€ í›„ë³´ë“¤ ì¤‘ í˜„ì¬ ìœ„ì¹˜ì™€ì˜ ê±°ë¦¬ê°€ ê°€ì¥ ì§§ì€ ê²ƒ ì„ íƒ
        for (int i = 0; i < remaining.Count; i++)
        {
            Transform cand = remaining[i];
            // sqrMagnitudeë¡œ ë£¨íŠ¸ ì—°ì‚°ì„ í”¼í•´ì„œ ì„±ëŠ¥ ìµœì í™”
            float sqr = (cand.position - currentPos).sqrMagnitude;
            if (sqr < bestSqr)
            {
                bestSqr = sqr;
                next = cand;
            }
        }

        // ì„ íƒëœ í›„ë³´ë¥¼ ê²½ë¡œì— ì¶”ê°€í•˜ê³ , í˜„ì¬ ìœ„ì¹˜ë¥¼ ê°±ì‹ 
            ordered.Add(next);
            remaining.Remove(next);
            currentPos = next.position;
        }

        waypoints = ordered;

        Debug.Log($"[AI] {name}: Greedy ë°©ì‹ìœ¼ë¡œ {waypoints.Count}ê°œì˜ 'Circle' ì›¨ì´í¬ì¸íŠ¸ ê²½ë¡œ êµ¬ì„± ì™„ë£Œ.");
    }

    // Scene ë·°ì—ì„œ ê²½ë¡œ ì‹œê°í™” (ë””ë²„ê¹…ìš©)
    void OnDrawGizmos()
    {
        if (waypoints == null || waypoints.Count == 0) return;

        Gizmos.color = Color.yellow;
        for (int i = 0; i < waypoints.Count - 1; i++)
        {
            if (waypoints[i] != null && waypoints[i + 1] != null)
            {
                Gizmos.DrawLine(waypoints[i].position, waypoints[i + 1].position);
            }
        }

        if (!hasReachedFinalDestination && currentWaypointIndex < waypoints.Count)
        {
            Transform currentTarget = waypoints[currentWaypointIndex];
            if (currentTarget != null)
            {
                Gizmos.color = Color.green;
                Gizmos.DrawLine(transform.position, currentTarget.position);
            }
        }
    }

    // --- (ê¸°ì¡´ ìŠ¤í¬ë¦½íŠ¸ì˜ SetRallyPoint ë“±ì€ ì œê±°ë¨. í•„ìš”í•˜ë©´ ì¶”ê°€) ---
}